--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(assets/Mac\ Os\ Wallpaper.jpeg);
+  background-image: url(assets/Mac\ Os\ Wallpaper.jpg);
 
 }
 
